<resources>
    <string name="app_name">Playlist maker</string>
    <string name="app_preference">app_preference</string>
    <string name="dark_mode_status">dark_mode_status</string>
    <string name="song_history">song_history</string>
    <string name="search_title">Поиск</string>
    <string name="media_library_title">Медиатека</string>
    <string name="setting_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="sharing_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Make</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_course_link">https://practicum.yandex.ru/learn/android-developer/</string>
    <string name="separator">•</string>
    <string name="update">Обновить</string>
    <string name="song_nothing_find">Ничего не нашлось</string>
    <string name="song_not_internet">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration_title">Длительность</string>
    <string name="album_title">Альбом</string>
    <string name="year_title">Год</string>
    <string name="style_title">Жанр</string>
    <string name="country_title">Страна</string>
</resources>