<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/double_spacing_16"
    android:paddingVertical="14dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_spacing_16"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_header_22_sp" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/spacing_8"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_title"
        android:textAllCaps="false"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_header_22_sp"
        app:cornerRadius="@dimen/double_spacing_16"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/spacing_8"
        app:iconTint="@color/text_black" />

    <Button
        android:id="@+id/media_library_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/spacing_8"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library_title"
        android:textAllCaps="false"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_header_22_sp"
        app:cornerRadius="@dimen/double_spacing_16"
        app:icon="@drawable/ic_media_lib"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/spacing_8"
        app:iconTint="@color/text_black" />

    <Button
        android:id="@+id/setting_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/spacing_8"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/setting_title"
        android:textAllCaps="false"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_header_22_sp"
        app:cornerRadius="@dimen/double_spacing_16"
        app:icon="@drawable/ic_setting"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/spacing_8"
        app:iconTint="@color/text_black" />
</LinearLayout>

