<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_spacing_16">

    <ImageView
        android:id="@+id/back_btn"
        style="@style/IconStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/header_title"
        style="@style/TextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_spacing_16"
        android:text="@string/setting_title"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SwitchColorStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_42"
        android:layout_marginEnd="16dp"
        android:layout_gravity="start"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <TextView
        android:id="@+id/shared_app_tittle"
        style="@style/TextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_42"
        android:text="@string/sharing_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_switch" />

    <ImageButton
        android:id="@+id/shared_app_btn"
        style="@style/IconStyle"
        android:backgroundTint="?attr/colorOnPrimary"
        android:src="@drawable/ic_shared"
        app:layout_constraintBottom_toBottomOf="@+id/shared_app_tittle"
        app:layout_constraintEnd_toEndOf="@+id/theme_switch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/theme_switch"
        app:layout_constraintTop_toTopOf="@+id/shared_app_tittle"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/support_title"
        style="@style/TextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_42"
        android:text="@string/support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shared_app_tittle" />

    <ImageView
        android:id="@+id/support_agent_btn"
        style="@style/IconStyle"
        app:layout_constraintBottom_toBottomOf="@+id/support_title"
        app:layout_constraintEnd_toEndOf="@+id/shared_app_btn"
        app:layout_constraintStart_toStartOf="@+id/shared_app_btn"
        app:layout_constraintTop_toTopOf="@+id/support_title"
        app:srcCompat="@drawable/ic_support_agent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/agreement_title"
        style="@style/TextViewRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_42"
        android:text="@string/user_agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support_title" />

    <ImageButton
        android:id="@+id/agreement_btn"
        style="@style/IconStyle"
        android:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/agreement_title"
        app:layout_constraintEnd_toEndOf="@+id/support_agent_btn"
        app:layout_constraintStart_toStartOf="@+id/support_agent_btn"
        app:layout_constraintTop_toTopOf="@+id/agreement_title"
        app:srcCompat="@drawable/ic_arrow_forward"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>