<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/double_spacing_16"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/header_title"
        style="@style/TextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_spacing_16"
        android:ems="10"
        android:hint="@string/search_title"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <ImageButton
        android:id="@+id/cleatTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:inputType="text"
        android:lines="1"
        android:maxLength="15"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchEditText"
        app:srcCompat="@drawable/ic_close_24"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_track_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <ImageView
        android:id="@+id/error_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/double_spacing_16"
        app:layout_constraintBottom_toTopOf="@+id/error_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_song_empty_search" />

    <TextView
        android:id="@+id/error_tv"
        style="@style/TextViewMediumSongError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/double_spacing_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText"
        tools:text="@string/song_not_internet" />

    <Button
        android:id="@+id/update_btn"
        style="@style/ButtonRoundStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/double_spacing_16"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>